Added context-menu for legend entries.
-context-menu options: delete series, show/hide series

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,13 @@
     href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
     rel="stylesheet">
     <link rel="stylesheet" href="../css/chosen.css">
+    <link rel="stylesheet" href="../css/jquery.contextMenu.css">
+
     <script src='../js/chosen.jquery.js'></script>
     <script src="../js/mrspec.js"></script>
     <script src="../js/tabs.js"></script>
-
+    <script src="../js/jquery.contextMenu.js"></script>
+    <script src="../js/jquery.ui.position.js"></script>
 
     <style type="text/css">
 
@@ -175,7 +178,7 @@ div.tabContent.hide { display: none; }
     </div>
 
     <div id = 'left'>
-        <div id="charts"></div>
+        <div id="charts" class="context-menu-one box menu-1"></div>
     </div>
 
     <div id='right' style='display:none'>
