Bugfixes: deleteSeries removes, not hide, series; get order in which metabolites selected.

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
     <script src="../js/tabs.js"></script>
     <script src="../js/jquery.contextMenu.js"></script>
     <script src="../js/jquery.ui.position.js"></script>
+    <script src="../js/chosen.order.jquery.js"></script>
+
 
     <style type="text/css">
 
