Bugfix for 'select all metabolites' button.

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@ div.tabContent.hide { display: none; }
 
                             <!--programmatic generation of menu options using Jinja2-->
                         	{% for met_name in queryable_metabolites %}
-                        	<option>{{ met_name }}</option>
+                        	<option class='q_mets'>{{ met_name }}</option>
                         	{% endfor %}
 
                         </select>
